# Maantra-2.0

./: README.md  docker-compose.yml  dockerfile  mcp_config.py  pyproject.toml
scripts/: quick_validation.py  run_indexer.py  setup_db.py  test_message_flow.py  test_rag.py  validate_slack_features.py
src/: main.py
src/agents/: agent.py
src/channels/: channel_manager.py  slack.py
src/channels/slack/: formatter.py  handler.py
src/config/: settings.py
src/features/slack/: __init__.py  reactions.py  reminders.py
src/llm/: gemini_provider.py  grok_provider.py  openai_provider.py  provider_factory.py
src/mcp/: client.py  config.py  tool_converter.py
src/mcp/servers/: github_server.py  notion_server.py
src/memory/: database.py
src/memory_ai/: mem0_client.py
src/rag/: embeddings.py  indexer.py  vectorstore.py
src/tools/: scheduler.py  slack_actions.py
