[project]
name = "maantra-ai-assistant"
version = "2.0.0"
description = "Maantra - Advanced Slack AI Assistant with RAG, Memory and MCP support"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Maantra" }
]

keywords = [
  "slack",
  "ai",
  "assistant",
  "rag",
  "memory",
  "mcp",
  "chatbot"
]

dependencies = [
  "openai>=1.40.0",
  "anthropic>=0.34.0",
  "slack-bolt>=1.18.0",
  "slack-sdk>=3.27.0",
  "sqlite-utils>=3.36",
  "mem0ai>=1.0.2",
  "croniter>=2.0.0",
  "pydantic>=2.8.0",
  "numpy>=1.26.0",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "python-dotenv>=1.0.1",
  "aiohttp>=3.13.3",
  "apscheduler>=3.11.2",
  "google-genai>=1.11.0",
  "cohere>=5.20.7",
]

[project.optional-dependencies]
rag = [
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0"
]

dev = [
  "ruff>=0.6.0",
  "pytest>=8.3.0",
  "mypy>=1.11.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

select = [
  "E",
  "F",
  "W",
  "I",
  "B",
  "UP"
]

ignore = [
  "E501"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.11"
strict = true

warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true

no_implicit_optional = true
strict_optional = true

ignore_missing_imports = true
